fix for submit complaint url

--- a/src/main/webapp/public/submit_complaint.html
+++ b/src/main/webapp/public/submit_complaint.html
@@ -39,9 +39,7 @@
 			<div>
 				<label class="block font-semibold mb-1">Organization ID</label>
 				<input name="org_id" type="text" required placeholder="Enter your organization ID" class="w-full border border-gray-400 bg-gray-50 rounded-md p-3 focus:outline-none focus:ring-2 focus:ring-indigo-500">
-				<p id="orgIdHelp" class="hidden text-sm text-green-600 mt-1">
-					Organization ID auto-filled from your organization's link
-				</p>
+				<p id="orgIdHelp" class="hidden text-sm text-green-600 mt-1">Organization ID auto-filled from your organization's link</p>
 			</div>
 			<!-- Complaint Type -->
 			<div>
