--- a/src/main/webapp/public/submit_complaint.html
+++ b/src/main/webapp/public/submit_complaint.html
@@ -69,7 +69,7 @@
 			<!-- Contact Info -->
 			<div>
 				<label class="block font-semibold mb-1">Contact Info <span
-					class="text-sm text-black-400">(optional)</span>
+					class="text-sm text-gray-700">(optional)</span>
 				</label> <input name="contact_info" type="text"
 					placeholder="Email or phone (optional)"
 					class="w-full border border-gray-400 bg-gray-50 rounded-md p-3 focus:outline-none focus:ring-2 focus:ring-indigo-500">
